[package]
name = "frqcheck_opt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmp-serde = "1.1.0"
nohash-hasher = "0.2.0"
rayon = "1.5.3"
memmap = "0.7.0"
fnv = "1.0.7"

[dependencies.term_macros]
git = "https://github.com/ckoshka/term_macros"
